--- a/.github/workflows/build_s2i.yaml
+++ b/.github/workflows/build_s2i.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: pull down s2i
       env:
         S2I_VERSION: 1.3.1
-      run:  wget -o /tmp/s2i.tar.gz https://github.com/openshift/source-to-image/releases/download/v1.3.1/source-to-image-v1.3.1-a5a77147-linux-amd64.tar.gz  ;  tar  --no-overwrite-dir -xvzf ./tmp/s2i.tar.gz -C /tmp ; chmod +x /tmp/s2i
+      run:  wget -o /tmp/s2i.tar.gz https://github.com/openshift/source-to-image/releases/download/v1.3.1/source-to-image-v1.3.1-a5a77147-linux-amd64.tar.gz  ;  tar  --no-overwrite-dir -xvzf /tmp/s2i.tar.gz -C /tmp ; chmod +x /tmp/s2i
     - name: Build the Docker image
       env:
         OU_CONTAINER_DEST: ${{ secrets.OU_CONTAINER_DEST }}
