--- a/src/main/webapp/WEB-INF/myvd-k8s.conf
+++ b/src/main/webapp/WEB-INF/myvd-k8s.conf
@@ -26,4 +26,4 @@ server.shadowUsers.mapping.config.mapping=mail=email,givenName=first_name,sn=las
 server.shadowUsers.api.className=com.tremolosecurity.myvd.K8sCrdInsert
 server.shadowUsers.api.config.alwaysMapUIDInFilter=true
 server.shadowUsers.api.config.nameSpace=#[K8S_OPENUNISON_NS:openunison]
-server.shadowUsers.api.config.k8sTargetName=k8s
+server.shadowUsers.api.config.k8sTargetName=openshift
